header/src/style.scss
/* ... */
/* Sidebar panel */
.cthf__sidebar-panel-wrap {
	& ul {
		margin: 0;
		padding: 0;
	}

	& .sidebar-panel__overlay {
		position: absolute;
		top: 0;
		left: 0;
		z-index: 99999;
		width: 100vw;
		height: 100vh;
		background-color: #00000043;
	}

	& .sidebar-panel__body {
		height: 100vh;
		position: fixed;
		top: 0;
		background: #fff;
		z-index: 999999;
		width: 35%;
		padding: 40px 26px;
		box-sizing: border-box;

		@media only screen and (width <= 1024px) {
			& {
				width: 100% !important;
			}
		}

		&.position-left {
			left: -100%;
			animation: openTrayLeft 0.3s ease forwards;
		}

		&.position-right {
			right: -100%;
			animation: openTrayRight 0.3s ease forwards;
		}

		& .close__icon {
			position: absolute;
			top: 0;
			right: 0;
			width: 18px;
			height: 18px;
			color: #000;
			display: flex;
			cursor: pointer;
			margin: 10px;
			transition: all 0.23s ease-out;

			&:hover {
				transform: rotate(180deg);
				transition: all 0.23s ease-in-out;
			}
		}

		/* Menu */
		& .wp-block-navigation__container .wp-block-navigation__submenu-container {
			border: none;
			border-top: 1px solid #ebe6fb !important;
			display: none;

			&.is-visible {
				display: flex;
			}

			& > li {
				margin-top: 6px;
			}
		}

		& .wp-block-navigation__submenu-icon {
			float: right;
			width: 30px;
			height: 30px;
			margin: 0;
			margin-top: 0px;
			margin-right: 0px;
			margin-top: -4px;
			margin-right: 0 !important;

			& svg {
				width: 16px;
				height: 16px;
			}
		}

		&
			.wp-block-navigation__container
			.wp-block-navigation-item.has-child
			> button
			svg {
			transform: rotate(0deg);
			transition: all 0.3s ease-out;
		}
		&
			.wp-block-navigation__container
			.wp-block-navigation-item.has-child:has(
				.wp-block-navigation__submenu-container.is-visible
			)
			> button
			svg {
			transform: scaleY(-1);
			transition: all 0.3s ease-in-out;
		}

		/* Button Group */
		.cthf__cta-btn-group {
			display: flex;
			align-items: center;

			& .cthf__cta-anchor-btn.sidebar-btn {
				text-align: center;
			}
		}
	}
}
.cthf__sidebar-panel-wrap.cthf__close-animation {
	& .sidebar-panel__overlay {
		animation: fadeOut 0.3s ease-in-out forwards;
	}
	& .sidebar-panel__body.position-right {
		animation: closeTrayRight 1s ease forwards;

		@media only screen and (width <= 1024px) {
			& {
				animation: closeTrayRight 0.5s ease forwards;
			}
		}
	}

	& .sidebar-panel__body.position-left {
		animation: closeTrayLeft 1s ease forwards;

		@media only screen and (width <= 1024px) {
			& {
				animation: closeTrayLeft 0.5s ease forwards;
			}
		}
	}
}

@keyframes openTrayLeft {
	from {
		left: -100%;
		opacity: 0;
	}
	to {
		left: 0;
		opacity: 1;
	}
}

@keyframes openTrayRight {
	from {
		right: -100%;
		opacity: 0;
	}
	to {
		right: 0;
		opacity: 1;
	}
}

@keyframes closeTrayRight {
	from {
		right: 0;
		opacity: 1;
	}
	to {
		right: -100%;
		opacity: 0;
	}
}

@keyframes closeTrayLeft {
	from {
		left: 0;
		opacity: 1;
	}
	to {
		left: -100%;
		opacity: 0;
	}
}

@keyframes fadeOut {
	from {
		opacity: 1;
	}
	to {
		opacity: 0;
	}
}

/* Overriding default block styles */
// Navigation Styles
.cthf__sidebar-panel-wrap nav {
	display: block !important;
}
.cthf__sidebar-panel-wrap .wp-block-navigation__container.wp-block-navigation {
	display: block;
	list-style: none;

	& > li:not(:first-child) {
		margin-top: 26px;
	}

	& .wp-block-navigation__submenu-container {
		visibility: visible;
		list-style: none;
		opacity: 1;
		position: initial;
		width: auto;
		height: auto;
		margin: 0 !important;
		background-color: transparent !important;
		box-shadow: none;
		padding-top: 6px !important;
	}

	& li {
		display: block;

		&.has-child .wp-block-navigation-item__content {
			display: inline-block;
			padding: 0;
		}
	}

	& .wp-block-navigation__submenu-container.wp-block-navigation-submenu {
		padding-left: 0 !important;
		box-sizing: border-box;
		width: 100%;
	}

	& .wp-block-navigation__submenu-container li:hover {
		background-color: transparent !important;
		box-shadow: none;
	}

	& .wp-block-navigation__submenu-icon {
		background-color: transparent;
		border: none;
		outline: none;
	}
	// Icon border Style
	&
		> li.wp-block-navigation-submenu.has-child
		> .wp-block-navigation__submenu-icon {
		border-left: 1px solid #ebe6fb;
		margin-top: -12px;
		margin-right: 10px !important;
		padding-left: 16px;
		height: 48px;
	}

	&
		.has-child
		.wp-block-navigation__submenu-container
		.wp-block-navigation__submenu-icon
		svg {
		transform: rotate(0deg);
	}
}
// Submenu hover effect
.wp-block-navigation__container
	.wp-block-navigation__submenu-container.wp-block-navigation-submenu {
	border: 0;
	box-shadow:
		0 2px 4px rgba(0, 0, 0, 0.06),
		0 8px 16px rgba(0, 0, 0, 0.12);
	margin-top: 15px;
	transition: all ease 0.23s;
	padding: 0 !important;
	z-index: 99;
}
.wp-block-navigation__container
	li:hover
	.wp-block-navigation__submenu-container.wp-block-navigation-submenu,
.wp-block-navigation__container
	.wp-block-navigation__submenu-container.wp-block-navigation-submenu
	li:hover
	ul.wp-block-navigation-submenu {
	margin-top: 0;
}
.wp-block-navigation__container
	.wp-block-navigation__submenu-container.wp-block-navigation-submenu
	ul.wp-block-navigation-submenu {
	margin-top: 10px;
	transition: all ease 0.23s;
}
// Subemnu a tag hover
.wp-block-navigation__submenu-container.wp-block-navigation-submenu a {
	display: block;
	color: inherit;
	padding: 8px 12px;
	transition:
		transform 0.2s ease,
		filter 0.2s ease;
}
.wp-block-navigation__submenu-container.wp-block-navigation-submenu a:hover {
	transform: translateX(5px);
	filter: brightness(85%);
}

// Search styles
.is-style-cthf__search-modal-overlay.wp-block-search__button-only {
	& .wp-block-search__input {
		display: none;
	}
}

